sessions/08-ingress-edge-routing/subsessions/09-optional-haproxy-ingress/01-message-board-ingress-haproxy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-board-ingress-haproxy
  namespace: app-ingress
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001
          - path: /api/apps
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
